<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="model"
                type="com.example.hackernews.presentation.viewmodel.newslist.NewsListViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <FrameLayout
                android:id="@+id/news_shimmer_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:visible="@{model.isLoading}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
            <include

                    layout="@layout/layout_shimmer"/>
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/news_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:setAdapter="@{model.adapter}"
                app:visible="@{!model.isLoading}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>